<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/bcg"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:layout_marginTop="55sp"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:text="@string/nom_text"/>

            <GridLayout
                android:id="@+id/categorieOffreId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="48dp"
                android:columnCount="2"
                android:rowCount="3">

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:elevation="3dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:id="@+id/offreElectId"
                            android:src="@drawable/electricity" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/energ_text"
                            android:fontFamily="@font/poppins"
                            android:textAllCaps="true"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:elevation="3dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:src="@drawable/network" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_text"
                            android:fontFamily="@font/poppins"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:elevation="3dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/health" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sante_text"
                            android:fontFamily="@font/poppins"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:elevation="3dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/sell" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vente_text"
                            android:fontFamily="@font/poppins"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:elevation="3dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/apprendre" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/educt_text"
                            android:fontFamily="@font/poppins"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:elevation="3dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/art" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/art_text"
                            android:fontFamily="@font/poppins"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:elevation="3dp"
                android:layout_gravity="center_vertical|center_horizontal">
            <LinearLayout
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:gravity="center">
                <Button
                    android:layout_marginTop="3sp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/cvBnt"
                    android:background="@drawable/cv"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cv_text"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/red"
                    android:textAllCaps="true"
                    android:textAlignment="center"/>
            </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>